--- a/package.json
+++ b/package.json
@@ -16,12 +16,9 @@
         "@fortawesome/free-solid-svg-icons": "^6.2.1",
         "@fortawesome/react-fontawesome": "^0.2.0",
         "@next/font": "13.0.7",
-        "eslint": "8.30.0",
-        "eslint-config-next": "13.0.7",
         "next": "13.0.7",
         "nextjs-google-analytics": "^2.3.0",
         "nprogress": "^0.2.0",
-        "prettier-plugin-tailwindcss": "^0.2.3",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-transition-group": "^4.4.5"
@@ -29,6 +26,10 @@
     "devDependencies": {
         "autoprefixer": "^10.4.13",
         "postcss": "^8.4.21",
-        "tailwindcss": "^3.2.7"
+        "prettier": "^2.8.4",
+        "tailwindcss": "^3.2.7",
+        "prettier-plugin-tailwindcss": "^0.2.3",
+        "eslint": "8.30.0",
+        "eslint-config-next": "13.0.7"
     }
 }
