--- a/package.json
+++ b/package.json
@@ -21,15 +21,16 @@
         "nprogress": "^0.2.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-icons": "^4.8.0",
         "react-transition-group": "^4.4.5"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.13",
+        "eslint": "8.30.0",
+        "eslint-config-next": "13.0.7",
         "postcss": "^8.4.21",
         "prettier": "^2.8.4",
-        "tailwindcss": "^3.2.7",
         "prettier-plugin-tailwindcss": "^0.2.3",
-        "eslint": "8.30.0",
-        "eslint-config-next": "13.0.7"
+        "tailwindcss": "^3.2.7"
     }
 }
