--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-icons": "^4.8.0",
-        "react-transition-group": "^4.4.5"
+        "react-modal": "^3.16.1",
+        "react-transition-group": "^4.4.5",
+        "reactstrap": "^9.1.6"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.13",
