--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "format": "prettier --write ."
     },
     "dependencies": {
-        "next": "13.0.7",
+        "next": "^13.0.7",
         "nextjs-google-analytics": "^2.3.0",
         "nprogress": "^0.2.0",
         "react": "18.2.0",
